monitoring/clusters/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: "canhnv-com-staging"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # Additional annotations for SSL compatibility
    nginx.ingress.kubernetes.io/ssl-protocols: "TLSv1.2 TLSv1.3"
    nginx.ingress.kubernetes.io/ssl-ciphers: "ECDHE+AESGCM:ECDHE+AES256:ECDHE+AES128:RSA+AESGCM:RSA+AES256:RSA+AES128"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - grafana.dev.k3s.canhnv.com
    secretName: grafana-dev-tls
  rules:
  - host: grafana.dev.k3s.canhnv.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
